--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>com.rom.jmultipatcher.JMultipatcherMain</mainClass>
+       <!-- <mainClass>com.rom.jmultipatcher.gui.javafx</mainClass>-->
+    <mainClass>com.rom.jmultipatcher.gui.cmd.CommandLineMain</mainClass>
+
         <compileSource>1.8</compileSource>
     </properties>
 
@@ -69,7 +71,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+           <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
@@ -95,6 +97,16 @@
                                 <argument>-outfile</argument>
                                 <argument>${project.build.finalName}.jar</argument>
                             </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-cli</id>
+                        <goals>
+                            <goal>exec</goal>                            
+                        </goals>
+                        <configuration>
+                            <executable>${java.home}/bin/java</executable>
+                            <commandlineArgs>${runfx.args}</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>  
@@ -160,6 +172,12 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+      <dependency>
+	<groupId>commons-cli</groupId>
+	<artifactId>commons-cli</artifactId>
+	<version>1.3.1</version>
+</dependency>
+
         
     </dependencies>
 </project>
